--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,17 +14,17 @@
  *= require_self
  */
 
- @font-face{
- 	font-family: "DarkLarch";
- 	src: url("DarkLarch_PERSONAL_USE.ttf");
- }
- @font-face{
- 	font-family: "Agreloy";
- 	src: url("Agreloy.ttf");
- }
+
  @font-face{
  	font-family: "BroshK";
- 	src: url("BroshK.ttf");
+ 	src: url('/public/BroshK.ttf');
+  src:url('BroshK.eot');
+  src:url('BroshK.eot?#iefix') format('embedded-opentype'),
+  url('BroshK.svg#icomoon') format('svg'),
+  url('BroshK.woff') format('woff'),
+  url('BroshK.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
  }
  body, html{
  	margin: 0;
@@ -32,12 +32,13 @@
   height: 100%;
 
  	overflow: hidden;
- 	font-family: BroshK;
+ 	font-family: "BroshK";
 
  	font-size: 24px;
  }
  span{
  	transition: all 1s ease-in;
+  -webkit-transition: all 1s ease-in;
  }
  li div{
  	margin-bottom: 10px;
@@ -54,6 +55,7 @@
  }
  #progress{
     transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
  }
  /*.bg-body:after {
    content: "";
@@ -81,6 +83,7 @@
  .common{
  	background-color: black;
  	transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
  	color: white;
  	cursor: pointer;
  	width: 50%;
@@ -95,22 +98,29 @@
  }
  .leftbtn{
  	transition: all 0.5 ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
  	float: left;
  }
  .leftbtn:hover{
  	background-color: rgb(255, 59, 63);
  }
  #poem_wrap{
- 	transition-property: background-color;
- 	transition-duration: 1.5s;
-
- 	height: 50%;
+ 	transition: all 1.5s ease-in-out;
+  -webkit-transition: all 1.5s ease-in-out;
+ 	height: 100%;
  	max-width: 100% !important;
  }
- #poem{
+ .buttons div{
+    height: 100%;
+ }
+ .buttons div p{
+   padding: 0;
 
+ }
+ #poem{
+   position: relative;
  	padding: 0;
- 	height: 100%;
+ 	height: 90%;
  	margin: 0;
  	text-align: center;
  	color: #a9a9a9;
@@ -122,6 +132,7 @@
  #poem li{
  	position: absolute;
  	transition:all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
  	padding: 10px;
  	left: 0;
  	right: 0;
