--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,5 @@
-<div class="" style="height: inherit;">
-			<div id="top" class="bars"></div>
+<div class="" style="height: 100%;">
 			<!-- fade in right or left and make the first word of every li red -->
-
-
 			<div id="poem_wrap">
 				<ul id="poem" >
 					<% @stanzas.each do |s| %>
@@ -36,10 +33,9 @@
 				<div style="width: 100%; height: 5px; background-color: #a9a9a9;">
 				   <div id="progress" style="height: inherit;  background-color: #00ff00;  width: 0;"></div>
 				</div>
-				<div>
-					<div class="rightbtn common">To the right! -> </div>
-					<div class="leftbtn common"> <- To the left!</div>
+				<div class="buttons" style="height: 10%;">
+					<div class="rightbtn common"><p>To the right! -></p></div>
+					<div class="leftbtn common"><p><- To the left!</p></div>
 				</div>
 			</div>
-			<div class="bars" id="bottom"></div>
 		</div>
